Release Notes

* 3/16/2016
  * fixed AtlasTR to correctly set/unset transient to datasets

* 3/15/2016
  * set cloudToTask for tasks with no outputs
  * fixed updateByCF for tasks with no outputs
  * added isDistributedDataset
  * changed AtlasPJB to take into account the number of files to move
  * using dict instead of list in AGIS json

* 3/11/2016
  * changed AtlasPJB to take EC into account when walltime estimation
  * changed getTasksToRefine to delete leftover

* 3/10/2016
  * changed AtlasDDM to support registration of multiple locations

* 3/8/2016
  * fixed InputChunk for distributed datasets

* 3/7/2016
  * changed AtlasDDM and AtlasAJB to support distributed datasets
  * fixed AtlasPJB to correctly get sites associated to a nucleus

* 3/4/2016
  * changed CF to lookup for assigning tasks

* 3/3/2016
  * fixed maxEvents for zero event files

* 2/25/2016
  * added allowInputLAN

* 2/23/2016
  * changed AtlasPJB to support allowInputWAN
  * removed some AGIS dependency from JG

* 2/22/2016
  * changed to update superstatus when scouting->exhausted

* 2/18/2016
  * changed hasZeroShare to work with processingType=validation in non-validation WQ
  * added doForPreStaging to AtlasAWD

* 2/16/2016
  * changed getScoutJobData to use jobs with nEvents<10 and wall>6h too

* 2/15/2016
  * added workQueueName
  * aded mcore_repro
  * added altStageOut

* 2/10/2016
  * fixed retryTask to correctly set status of secondary datasets
  * fixed to register final datasets when internal merge is used
  * removed T1 constraint from AtlasPJB for high prio or scouts  

* 2/9/2016
  * added nokill to reassignTask

* 2/8/2016
  * added network weights to brokerage

* 2/4/2016
  * fixed ToBeProcessed to correctly read secondary files when multiple RAM requirements
  * changed finishTask to ignore failGoalUnreached
  * setting nucleus and eventService in jobSpec

* 2/3/2016
  * fixed MIDDLENAME for multi fileds of addNthFieldOfInDSToLFN