@@ -1,6 +1,7 @@
 Release Notes
 
 * 3/16/2016
+  * added putLogToOS
   * fixed AtlasTR to correctly set/unset transient to datasets
 
 * 3/15/2016
